<resources>
    <string name="app_name">اطلاعات برلین</string>
    <string name="action_settings">تنظیمات</string>
    <string name="main_title">راهنمای گردشگری برلین</string>
    <string name="welcome_message">به برلین خوش آمدید! شهر تاریخ و فرهنگ</string>
    <string name="select_attraction">یک جاذبه را برای شروع انتخاب کنید</string>
    <string name="brandenburg_gate">دروازه براندنبورگ</string>
    <string name="berlin_wall">دیوار برلین</string>
    <string name="reichstag">رایشستاگ</string>
    <string name="museum_island">جزیره موزه‌ها</string>
    <string name="charlottenburg_palace">کاخ شارلوتنبورگ</string>
    <string name="berlin_cathedral">کلیسای جامع برلین</string>
    <string name="alexanderplatz">میدان الکساندر</string>
    <string name="potzdamer_platz">پوتسدامر پلاتز</string>
    <string name="checkpoint_charlie">پاسگاه چارلی</string>
    <string name="berlin_zoo">باغ وحش برلین</string>
    <string name="tv_tower">برج تلویزیون برلین</string>
    <string name="holocaust_memorial">بن یادبود هولوکاست</string>
    <string name="unter_den_linden">خیابان اونتر دن لیندن</string>
    <string name="kaiser_wilhelm_church">کنیسه قیصر ویلهلم</string>
    <string name="gropius_bau">موزه گروپیوس‌بائو</string>
    <string name="tempelhof_airport">فرودگاه تمپلهوف</string>
    <string name="hackescher_markt">بازار هاکشر</string>
    <string name="spandau_citadel">قلعه اسپانداو</string>
    <string name="treptower_park">پارک ترپتاور</string>
    <string name="east_side_gallery">گالری ساید شرقی</string>
    <string name="brandenburg_gate_title">دروازه براندنبورگ</string>
    <string name="brandenburg_gate_history">دروازه براندنبورگ در سال ۱۷۹۱ تکمیل شد و نماد شهر برلین است. این دروازه تنها دروازه‌ای بود که از دیوار شهر برلین باقی ماند. در طول تاریخ، شاهد رویدادهای مهمی از جمله ورود ناپلئون و فراز و نشیب‌های جنگ سرد بوده است.</string>
    <string name="brandenburg_gate_info">موقعیت: میدان پاریزر\nآدرس: Pariser Platz, 10117 Berlin\nساعات بازدید: ۲۴ ساعته، فضای باز\nورود: رایگان</string>
    <string name="brandenburg_gate_tips">بهترین زمان عکاسی: طلوع و غروب آفتاب\nنکته: در شب بسیار زیبا و روشن است</string>
    <string name="berlin_wall_title">دیوار برلین</string>
    <string name="berlin_wall_history">دیوار برلین در سال ۱۹۶۱ ساخته شد و برلین را به دو بخش شرقی و غربی تقسیم کرد. این دیوار تا سال ۱۹۸۹ پابرجا بود و نماد جنگ سرد بود. سقوط دیوار برلین نماد اتحاد مجدد آلمان و پایان جنگ سرد بود.</string>
    <string name="berlin_wall_info">موقعیت: چندین نقطه در شهر\nآدرس: East Side Gallery, Mühlenstraße, 10243 Berlin\nساعات بازدید: ۲۴ ساعته\nورود: رایگان</string>
    <string name="berlin_wall_tips">گالری ساید شرقی طولترین بخش باقی‌مانده دیوار است\nنکته: هنر خیابانی‌های آن را از دست ندهید</string>
    <string name="reichstag_title">رایشستاگ</string>
    <string name="reichstag_history">ساختمان رایشستاگ در سال ۱۸۹۴ تکمیل شد و محل پارلمان آلمان است. این ساختمان در طول تاریخ شاهد رویدادهای مهمی از جمله آتش‌سوزی معروف سال ۱۹۳۳ و بازسازی پس از اتحاد آلمان بوده است.</string>
    <string name="reichstag_info">موقعیت: نزدیک دروازه براندنبورگ\nآدرس: Platz der Republik 1, 11011 Berlin\nساعات بازدید: ۸:۰۰-۲۴:۰۰\nورود: رایگان (ثبت‌نام آنلاین لازم)</string>
    <string name="reichstag_tips">گنcup شیشه‌ای طراحی معروف نورمن فاستر است\nنکته: حتماً قبل از بازدید آنلاین ثبت‌نام کنید</string>
    <string name="museum_island_title">جزیره موزه‌ها</string>
    <string name="museum_island_history">جزیره موزه‌ها در سال ۱۹۹۹ در فهرست میراث جهانی یونسکو ثبت شد. این مجموعه شامل پنج موزه معروف است که مجموعه‌های هنری و تاریخی از دوران باستان تا قرن نوزدهم را در خود جای داده‌اند.</string>
    <string name="museum_island_info">موقعیت: مرکز شهر، روی رود اسپری\nآدرس: Museumsinsel, 10178 Berlin\nساعات بازدید: بسته به موزه\nورود: ۱۸ یورو برای تمام موزه‌ها</string>
    <string name="museum_island_tips">موزه پرگامون محبوب‌ترین موزه است\nنکته: بلیط یک روزه تمام موزه‌ها مقرون‌به‌صرفه است</string>
    <string name="charlottenburg_palace_title">کاخ شارلوتنبورگ</string>
    <string name="charlottenburg_palace_history">این کاخ بزرگ‌ترین کاخ در برلین است که در قرن هفدهم برای همسر پادشاه فردریک اول ساخته شد. کاخ در جنگ جهانی دوم به شدت آسیب دید و با دقت بازسازی شد.</string>
    <string name="charlottenburg_palace_info">موقعیت: غرب برلین\nآدرس: Spandauer Damm 10-22, 14059 Berlin\nساعات بازدید: ۱۰:۰۰-۱۷:۰۰\nورود: ۱۲ یورو</string>
    <string name="charlottenburg_palace_tips">باغ‌های کاخ بسیار زیبا و برای قدم‌ عالی هستند\nنکته: در تابستان کنسرت‌های موسیقی در باغ برگزار می‌شود</string>
    <string name="berlin_cathedral_title">کلیسای جامع برلین</string>
    <string name="berlin_cathedral_history">این کلیسای جامع باشکوه در سال ۱۹۰۵ تکمیل شد و نماد معماری پروتستان است. گنبد اصلی در جنگ جهانی دوم تخریب شد و در سال ۱۹۹۳ بازسازی شد.</string>
    <string name="berlin_cathedral_info">موقعیت: جزیره موزه‌ها\nآدرس: Am Lustgarten, 10178 Berlin\nساعات بازدید: ۹:۰۰-۲۰:۰۰\nورود: ۱۰ یورو</string>
    <string name="berlin_cathedral_tips">از پله‌ها به بالای گنبد بروید تا منظره‌ای فوق‌العاده داشته باشید\nنکته: برای عکاسی داخل کلیسا هزینه جداگانه وجود دارد</string>
    <string name="alexanderplatz_title">میدان الکساندر</string>
    <string name="alexanderplatz_history">این میدان در سال ۱۸۰۵ به نام الکساندر اول، پادشاه روسیه نام‌گذاری شد. در دوران آلمان شرقی، میدان الکساندر مرکز تجاری و فرهنگی شهر بود و امروزه نیز یکی از مراکز اصلی برلین است.</string>
    <string name="alexanderplatz_info">موقعیت: مرکز شرق برلین\nآدرس: 10178 Berlin\nساعات بازدید: ۲۴ ساعته\nورود: رایگان</string>
    <string name="alexanderplatz_tips">برج تلویزیون نماد اصلی میدان است\nنکته: برای خرید و تفریحات مناسب است</string>
    <string name="potzdamer_platz_title">پوتسدامر پلاتز</string>
    <string name="potzdamer_platz_history">پوتسدامر پلاتز در دوران طلایی برلین (دهه ۱۹۲۰) شلوغ‌ترین میدان اروپا بود. در جنگ جهانی دوم به طور کامل تخریب شد و در طول تقسیم آلمان در منطقه‌ی مرزی قرار داشت. بازسازی مدرن آن در دهه ۱۹۹۰ انجام شد.</string>
    <string name="potzdamer_platz_info">موقعیت: مرکز برلین\nآدرس: 10785 Berlin\nساعات بازدید: ۲۴ ساعته\nورود: رایگان</string>
    <string name="potzdamer_platz_tips">معماری مدرن آن بسیار دیدنی است\nنکته: در زمستان بازار کریسمس زیبایی دارد</string>
    <string name="checkpoint_charlie_title">پاسگاه چارلی</string>
    <string name="checkpoint_charlie_history">پاسگاه چارلی معروف‌ترین عبور مرزی بین شرق و غرب برلین بود. این پاسگاه شاهد تنش‌های بسیاری در جنگ سرد بود و امروزه به عنوان موزه و نماد تاریخی باقی مانده است.</string>
    <string name="checkpoint_charlie_info">موقعیت: کایزردام\nآدرس: Friedrichstraße 43-45, 10969 Berlin\nساعات بازدید: ۹:۰۰-۲۲:۰۰\nورود: موزه ۱۴.۵ یورو</string>
    <string name="checkpoint_charlie_tips">موزه پاسگاه چارلی بسیار دیدنی است\nنکته: افراد لباس‌پوش سربازان آمریکایی برای عکاسی وجود دارند</string>
    <string name="berlin_zoo_title">باغ وحش برلین</string>
    <string name="berlin_zoo_history">باغ وحش برلین قدیمی‌ترین باغ وحش آلمان است که در سال ۱۸۴۴ تأسیس شد. در جنگ جهانی دوم تقریباً تمام حیوانات از بین رفتند، اما پس از جنگ با دقت بازسازی شد و امروزه یکی از معروف‌ترین باغ‌وحش‌های اروپاست.</string>
    <string name="berlin_zoo_info">موقعیت: غرب مرکز شهر\nآدرس: Hardenbergplatz 8, 10787 Berlin\nساعات بازدید: ۹:۰۰-۱۸:۳۰\nورود: ۱۶ یورو</string>
    <string name="berlin_zoo_tips">بیش از ۲۰,۰۰۰ حیوان در این باغ وحش زندگی می‌کنند\nنکته: آکواریوم مجزا هزینه ورودی جداگانه دارد</string>
    <string name="tv_tower_title">برج تلویزیون برلین</string>
    <string name="tv_tower_history">برج تلویزیون برلین در سال ۱۹۶۹ ساخته شد و با ارتفاع ۳۶۸ متر، بلندترین ساختمان آلمان است. این برج در دوران آلمان شرقی به عنوان نماد قدرت فناوری و پیشرفت سوسیالیستی ساخته شد و امروزه یکی از نمادهای اصلی برلین محسوب می‌شود.</string>
    <string name="tv_tower_info">موقعیت: میدان الکساندر\nآدرس: Panoramastraße 1A, 10178 Berlin\nساعات بازدید: ۹:۰۰-۲۴:۰۰\nورود: ۱۶.۵۰ یورو</string>
    <string name="tv_tower_tips">از بالای برج منظره‌ای ۳۶۰ درجه از شهر را ببینید\nنکته: رستوران دوار در بالای برج تجربه‌ای منحصر به فرد است</string>
    <string name="holocaust_memorial_title">بن یادبود هولوکاست</string>
    <string name="holocaust_memorial_history">این بن یادبود به یاد یهودیان قربانی هولوکاست در جنگ جهانی دوم ساخته شد و در سال ۲۰۰۵ افتتاح گردید. مجموعه شامل ۲۷۱۱ ستون بتنی است که بازدیدکنندگان را به عبور و تفکر دعوت می‌کند.</string>
    <string name="holocaust_memorial_info">موقعیت: مرکز شهر\nآدرس: Cora-Berliner-Straße 1, 10117 Berlin\nساعات بازدید: ۲۴ ساعته\nورود: رایگان</string>
    <string name="holocaust_memorial_tips">موزه زیرزمینی بسیار تأثیرگذار است\nنکته: با احترام و سکوت در میان ستون‌ها راه بروید</string>
    <string name="unter_den_linden_title">خیابان اونتر دن لیندن</string>
    <string name="unter_den_linden_history">این خیابان معروف در قرن هفدهم به عنوان مسیر سواری پادشاه به قصر شارلوتنبورگ ساخته شد و به خاطر درختان لیندن (نوعی درخت نعناع) نام‌گذاری گردید. این خیابان شاهد رویدادهای تاریخی مهمی بوده و قلب تپنده برلین محسوب می‌شود.</string>
    <string name="unter_den_linden_info">موقعیت: از دروازه براندنبورگ تا جزیره موزه‌ها\nآدرس: Unter den Linden, 10117 Berlin\nساعات بازدید: ۲۴ ساعته\nورود: رایگان</string>
    <string name="unter_den_linden_tips">پیاده‌روی در این خیابان تجربه‌ای تاریخی است\nنکته: ساختمان‌های تاریخی و کافه‌های زیبایی در مسیر وجود دارد</string>
    <string name="kaiser_wilhelm_church_title">کنیسه قیصر ویلهلم</string>
    <string name="kaiser_wilhelm_church_history">این کنیسه در سال ۱۸۹۵ به افتخار قیصر ویلهلم اول ساخته شد و در بمباران‌های جنگ جهانی دوم به شدت آسیب دید. ویرانه‌های آن به عنوان یادبود جنگ حفظ شده و کنیسه جدیدی در کنار آن ساخته شد.</string>
    <string name="kaiser_wilhelm_church_info">موقعیت: مرکز خرید غرب برلین\nآدرس: Breitscheidplatz, 10789 Berlin\nساعات بازدید: ۹:۰۰-۱۹:۰۰\nورود: رایگان</string>
    <string name="kaiser_wilhelm_church_tips">شیشه‌های رنگی آبی جدید بسیار زیبا هستند\nنکته: ویرانه‌ها نماد صلح و آشتی هستند</string>
    <string name="gropius_bau_title">موزه گروپیوس‌بائو</string>
    <string name="gropius_bau_history">این ساختمان در سال ۱۸۸۱ به عنوان موزه هنرهای تزئینی طراحی شد و یکی از مهم‌ترین موزه‌های هنر مدرن برلین است. ساختمان به خاطر معماری زیبا و نمایشگاه‌های هنری متنوع شهرت جهانی دارد.</string>
    <string name="gropius_bau_info">موقعیت: نزدیک پاسگاه چارلی\nآدرس: Niederkirchnerstraße 7, 10963 Berlin\nساعات بازدید: ۱۰:۰۰-۱۸:۰۰\nورود: بسته به نمایشگاه</string>
    <string name="gropius_bau_tips">نمایشگاه‌های هنری مدرن و معاصر بسیار عالی هستند\nنکته: فضای باز در مرکز ساختمان برای استراحت مناسب است</string>
    <string name="tempelhof_airport_title">فرودگاه تمپلهوف</string>
    <string name="tempelhof_airport_history">این فرودگاه در سال ۱۹۲۳ ساخته شد و یکی از بزرگ‌ترین فرودگاه‌های اروپا در دوران نازی‌ها بود. پس از جنگ، فرودگاه در محاصره برلین نقش حیاتی داشت و امروزه به عنوان پارک بزرگ شهری استفاده می‌شود.</string>
    <string name="tempelhof_airport_info">موقعیت: جنوب برلین\nآدرس: Platz der Luftbrücke, 12101 Berlin\nساعات بازدید: ۶:۰۰-غروب\nورود: رایگان</string>
    <string name="tempelhof_airport_tips">پارک بسیار بزرگ برای دوچرخه‌سواری و پیاده‌روی عالی است\nنکته: تورهای ساختمان فرودگاه بسیار دیدنی است</string>
    <string name="hackescher_markt_title">بازار هاکشر</string>
    <string name="hackescher_markt_history">این منطقه در قرن نوزدهم به عنوان مرکز تجاری توسعه یافت و امروزه یکی از پرجنب‌وجوش‌ترین مناطق برلین است. معابر کوچک، کافه‌های هنری و فروشگاه‌های مستقل این منطقه را به محلی محبوب تبدیل کرده‌اند.</string>
    <string name="hackescher_markt_info">موقعیت: مرکز شرق برلین\nآدرس: Hackescher Markt, 10178 Berlin\nساعات بازدید: ۲۴ ساعته\nورود: رایگان</string>
    <string name="hackescher_markt_tips">کافه‌ها و رستوران‌های عالی برای نوشیدن قهوه\nنکته: معابر کوچک و ساختمان‌های تاریخی بسیار دیدنی هستند</string>
    <string name="spandau_citadel_title">قلعه اسپانداو</string>
    <string name="history">تاریخچه</string>
    <string name="information">اطلاعات</string>
    <string name="tips">نکات مفید</string>
</resources>